# ubs-landing-zone

./: .env.example  .gitignore  Architecture airflow.drawio  Current.drawio  generate_test_content.sh  pyproject.toml
src/ubs_landing_zone/: __main__.py  az_copy.py  executor.py  pipeline.py
tests/resource/TF/: TF.7654321.20230822.S123.V42.md5
tests/resource/TF copy/: TF.1234567.20240515.S001.V1.md5
tests/resource/TF-FAILING copy/: TF.0000001.19991231.S999.V2048.md5
tests/resources/NOT_OK_missing_checksum_corrupted_tar_missing_control/: 3_missing_control.md5
tests/resources/OK_100_feeds/: archive_1.md5  archive_1.tar  archive_10.md5  archive_10.tar  archive_100.md5  archive_100.tar  archive_11.md5  archive_11.tar  archive_12.md5  archive_12.tar  archive_13.md5  archive_13.tar  archive_14.md5  archive_14.tar  archive_15.md5  archive_15.tar  archive_16.md5  archive_16.tar  archive_17.md5  archive_17.tar  archive_18.md5  archive_18.tar  archive_19.md5  archive_19.tar  archive_2.md5  archive_2.tar  archive_20.md5  archive_20.tar  archive_21.md5  archive_21.tar  archive_22.md5  archive_22.tar  archive_23.md5  archive_23.tar  archive_24.md5  archive_24.tar  archive_25.md5  archive_25.tar  archive_26.md5  archive_26.tar  (+160 more)
tests/resources/OK_10_feeds/: archive_1.md5  archive_1.tar  archive_10.md5  archive_10.tar  archive_2.md5  archive_2.tar  archive_3.md5  archive_3.tar  archive_4.md5  archive_4.tar  archive_5.md5  archive_5.tar  archive_6.md5  archive_6.tar  (+8 more)
tests/ubs_landing_zone/: latest_version.txt  test_executor.py  test_integration.py  test_pipeline.py
(+11 files in other folders)
